добавил шрифты, иконки, видео

--- a/app/src/sass/helpers/_fonts.sass
+++ b/app/src/sass/helpers/_fonts.sass
@@ -1,7 +1,7 @@
 @font-face
-  font-family: 'Inter'
-  src: url('/app/build/fonts/HelveticaNeue.woff2') format('woff2')
-  src: url('/app/build/fonts/HelveticaNeue.ttf') format('ttf')
-  font-weight: 300
+  font-family: 'Jost'
+  src: url('/app/build/fonts/Jost-Regular.woff') format('woff')
+  src: url('/app/build/fonts/Jost-Regular.ttf') format('ttf')
+  font-weight: 400
   font-style: normal
   font-display: swap
