--- a/app/src/pug/includes/__head.pug
+++ b/app/src/pug/includes/__head.pug
@@ -5,7 +5,7 @@ meta(name="cmsmagazine", content="6a5de8b480a9f417d465ec3935efb0fd")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 link(rel="shortcut icon", href="", type="image/x-icon")
 
-title Site
+title AST
 meta(name="description", content="")
 meta(name="keywords", content="")
-link(rel="stylesheet", href="css/main.css")
+link(rel="stylesheet", href="/app/build/css/style.min.css")
