--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -1,6 +1,9 @@
 .header
   z-index: 1
-  position: relative
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
   &-wrapper
     display: flex
     flex-direction: row
@@ -19,7 +22,7 @@
         margin-left: 0px
       &:hover
         a
-          color: $orangeText
+          color: $orange
           transition: all 0.4s
       a
         color: #fff
