--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -1,13 +1,15 @@
 .back-video
   width: 100%
-  position: absolute
-  top: 0
-  left: 0
+  position: relative
+  height: 100%
   .video-wrapper
-    position: fixed
+    position: absolute
     top: 0
     left: 0
     width: 100%
+    height: 100%
+    video
+      width: 100%
     &::before
       content: ""
       width: 100%
@@ -17,23 +19,35 @@
       top: 0
       left: 0
       background-color: rgba(0,0,0,0.65)
-    video
-      width: 100%
-      z-index: 0
+      z-index: 1
+  &--fixed
+    .video-wrapper
+      position: fixed
+  &--bottom
+    .video-wrapper
+      position: absolute
+      bottom: 0
+      left: 0
+      video
+        position: absolute
+        bottom: 0
+        left: 0
   &__container
     position: relative
     z-index: 1
     max-width: 1200px
-    margin-top: 425px
+    padding-top: 425px
     padding-left: 155px
+    padding-bottom: 130px
   &__tagline
     color: #fff
     margin-bottom: 40px
     max-width: 750px
+    font-size: 60px
   &__year
     font-size: 160px
     line-height: 164px
-    color: $orangeText
+    color: $orange
     margin-bottom: 260px
   &__text
     font-size: 22px
@@ -42,7 +56,7 @@
     max-width: 600px
   &__list
     margin-top: 335px
-    margin-bottom: 130px
+
 
 .achievements
   &-list
@@ -57,7 +71,7 @@
       margin-right: 0px
     &__num
       font-size: 72px
-      color: $orangeText
+      color: $orange
       margin-bottom: 15px
     &__text
       font-size: 22px
