--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -6,3 +6,36 @@ body
   max-width: 1785px
   width: 100%
   margin: 0 auto
+.section
+  padding-top: 140px
+  &-text
+    font-size: 60px
+    line-height: 64px
+    color: #000
+    &--head
+      max-width: 460px
+  &-head
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    padding: 0 100px
+
+.price-link
+  background-color: $orange
+  border-radius: 50%
+  overflow: hidden
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  width: 180px
+  height: 180px
+  a
+    font-size: 22px
+    line-height: 26px
+    color: #fff
+    display: flex
+    width: 100%
+    height: 100%
+    justify-content: center
+    align-items: center
