часть блока о компании

--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -14,6 +14,9 @@ body
     color: #000
     &--head
       max-width: 460px
+    &--center
+      text-align: center
+      margin: 0 auto
   &-head
     display: flex
     flex-direction: row
@@ -39,3 +42,31 @@ body
     height: 100%
     justify-content: center
     align-items: center
+
+
+.common
+  &-text
+    font-size: 22px
+    line-height: 32px
+    color: #000
+
+
+.circle-text
+  width: 400px
+  height: 400px
+  background-color: $orange
+  @include dfc
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  overflow: hidden
+  &__title
+    font-size: 72px
+    line-height: 64px
+    margin-bottom: 20px
+    color: #fff
+  &__desc
+    font-size: 22px
+    line-height: 32px
+    text-align: center
+    color: #fff
