--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -43,13 +43,11 @@ body
     justify-content: center
     align-items: center
 
-
 .common
   &-text
     font-size: 22px
     line-height: 32px
     color: #000
-
 
 .circle-text
   width: 400px
@@ -63,10 +61,20 @@ body
   &__title
     font-size: 72px
     line-height: 64px
-    margin-bottom: 20px
+    margin-bottom: 7px
     color: #fff
   &__desc
     font-size: 22px
     line-height: 32px
     text-align: center
     color: #fff
+    max-width: 290px
+
+.link
+  &--orange
+    background-color: $orange
+    color: #fff
+    font-size: 22px
+    line-height: 28px
+    padding: 11px 36px 12px
+    border-radius: 28px
