--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -1,3 +1,16 @@
+h1
+  font-size: 72px
+  line-height: 76px
 h2
   font-size: 60px
   line-height: 64px
+.wiziwig
+  a
+    font-size: 22px
+    line-height: 32px
+    color: #000
+    border-bottom: 1px solid rgba(217,217,217,1)
+    transition: all 0.4s
+    &:hover
+      border-bottom: 1px solid rgba(217,217,217,0)
+      transition: all 0.4s
