--- a/app/src/sass/components/partners.sass
+++ b/app/src/sass/components/partners.sass
@@ -1,6 +1,7 @@
 .partners
   background-color: #fcfcfc
   padding-top: 200px
+  padding-bottom: 130px
   &-text
     max-width: 950px
     margin: 0 auto
