--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -21,7 +21,17 @@ body
     display: flex
     flex-direction: row
     justify-content: space-between
+    align-items: center
     padding: 0 100px
+    a
+      font-size: 22px
+      line-height: 32px
+      color: #000
+      border-bottom: 1px solid rgba(217,217,217,1)
+      transition: all 0.4s
+      &:hover
+        border-bottom: 1px solid rgba(217,217,217,0)
+        transition: all 0.4s
 
 .price-link
   background-color: $orange
