--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -7,7 +7,7 @@ body
   width: 100%
   margin: 0 auto
 .section
-  padding-top: 140px
+  padding-top: 105px
   &-text
     font-size: 60px
     line-height: 64px
@@ -22,7 +22,7 @@ body
     flex-direction: row
     justify-content: space-between
     align-items: center
-    padding: 0 100px
+    padding: 0 88px
     a
       font-size: 22px
       line-height: 32px
@@ -43,6 +43,8 @@ body
   justify-content: center
   width: 180px
   height: 180px
+  margin-top: 6px
+  margin-right: 4px
   a
     font-size: 22px
     line-height: 26px
@@ -71,7 +73,7 @@ body
   &__title
     font-size: 72px
     line-height: 64px
-    margin-bottom: 7px
+    margin-bottom: 9px
     color: #fff
   &__desc
     font-size: 22px
