--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -1,4 +1,5 @@
 .products
+  padding-top: 131px
   &-list
     margin-top: 90px
     width: 100%
@@ -8,7 +9,8 @@
     @include dfr
     justify-content: center
     position: relative
-    padding: 35px 0px
+    padding: 30px 0px
+    margin-bottom: 3px
     &::before, &::after
       content: ""
       width: 100%
@@ -30,8 +32,6 @@
         transition: height 0.4s
         visibility: visible
         opacity: 1
-      .products-item__lim
-        border-bottom: 1px solid rgba(255, 255, 255, 0.35)
       .products-item__hover
         &::after
           max-height: 100%
@@ -48,16 +48,13 @@
       background-color: transparent
       z-index: 2
       text-shadow: none
-    &__lim
-      border-bottom: 1px solid rgba(255, 255, 255, 0)
-      line-height: 70px
-      position: relative
-      display: inline-block
     &__hover
       line-height: 102px
       position: relative
       z-index: 1
+      font-stretch: 90%
       &::after
+        content: attr(data-hover)
         position: absolute
         top: 0px
         left: 0
@@ -65,10 +62,7 @@
         padding: 0px 0px
         max-height: 0
         color: #fff
-        content: attr(data-hover)
-        -webkit-transition: max-height 0.5s
-        -moz-transition: max-height 0.5s
-        transition: max-height 0.5s
+        transition: max-height 0.4s
   &-parallax
     @include dfr
     width: 100%
@@ -103,3 +97,5 @@
       &--7
         top: 35px
         right: 160px
+  .section-head
+    align-items: flex-start
