--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -35,6 +35,12 @@
         position: absolute
         bottom: 0
         left: 0
+  &--fixed
+    .video-wrapper
+      position: fixed
+      top: 0
+      left: 0
+
   &__container
     position: relative
     z-index: 1
