--- a/app/src/sass/components/about.sass
+++ b/app/src/sass/components/about.sass
@@ -26,10 +26,10 @@
   right: calc(50% + 266px)
   &--fixed
     position: fixed
-    top: calc(50% - 175px)
+    top: calc(50% - 280px)
   &--bottom
     position: absolute
-    bottom: 0
+    bottom: 650px
     top: auto
   &.animation
     .auto
@@ -93,3 +93,9 @@
     background-position: 0px 0px
   100%
     background-position: 0px -17690px
+.building-control
+  width: 100%
+  position: absolute
+  top: 680px
+  height: 1px
+
