--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -2,6 +2,9 @@
   &-section
     padding-top: 126px
     padding-bottom: 133px
+    position: relative
+    z-index: 2
+    background-color: #fff
   &-list
     display: flex
     flex-wrap: wrap
