--- a/app/src/sass/components/partners.sass
+++ b/app/src/sass/components/partners.sass
@@ -2,6 +2,8 @@
   background-color: #fcfcfc
   padding-top: 204px
   padding-bottom: 130px
+  position: relative
+  z-index: 2
   &-text
     max-width: 950px
     margin: 0 auto
