--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -1,5 +1,8 @@
 .products
   padding-top: 131px
+  position: relative
+  z-index: 2
+  background-color: #fff
   &-list
     margin-top: 90px
     width: 100%
