--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -1,8 +1,12 @@
 .map
   width: 100%
   height: 100%
+  position: relative
   &-section
     padding-top: 152px
+    position: relative
+    z-index: 2
+    background-color: #fff
   &-wrapper
     margin-top: 47px
   &-balloon
