--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -90,3 +90,12 @@ body
     line-height: 28px
     padding: 11px 36px 12px
     border-radius: 28px
+
+.btn
+  &--orange
+    background-color: $orange
+    color: #fff
+    font-size: 18px
+    line-height: 24px
+    padding: 15px 36px 15px
+    border-radius: 28px
