--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -1,6 +1,6 @@
 .map
-  width: 100%
-  height: 100%
+  width: 100% !important
+  height: 100% !important
   position: relative
   &-section
     padding-top: 152px
@@ -9,6 +9,7 @@
     background-color: #fff
   &-wrapper
     margin-top: 47px
+    height: 600px
   &-balloon
     &__header
       font-size: 28px
