--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -6,6 +6,9 @@ body
   max-width: 1785px
   width: 100%
   margin: 0 auto
+  @media screen and ( max-width: 1885px )
+    max-width: none
+    padding: 0px 50px
 .section
   padding-top: 105px
   &-text
