--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -7,9 +7,11 @@
     top: 0
     left: 0
     width: 100%
-    height: 100%
+    height: 100vh
     video
       width: 100%
+      height: 100%
+      object-fit: cover
       position: relative
       z-index: 1
       opacity: 0.65
