--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -1,6 +1,9 @@
 h1
   font-size: 72px
   line-height: 76px
+  @media screen and ( max-width: 1366px )
+    font-size: 60px
+    line-height: 70px
 h2
   font-size: 60px
   line-height: 64px
