--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -3,10 +3,14 @@
   position: relative
   z-index: 2
   background-color: #fff
+  @media screen and ( max-width: 1366px )
+    padding-top: 94px
   &-list
     margin-top: 90px
     width: 100%
     @include dfc
+    @media screen and ( max-width: 1366px )
+      margin-top: 52px
   &-item
     width: 100%
     @include dfr
@@ -14,6 +18,9 @@
     position: relative
     padding: 30px 0px
     margin-bottom: 3px
+    @media screen and ( max-width: 1366px )
+      padding: 28px 0px
+      margin-bottom: 0px
     &::before, &::after
       content: ""
       width: 100%
@@ -51,11 +58,16 @@
       background-color: transparent
       z-index: 2
       text-shadow: none
+      @media screen and ( max-width: 1366px )
+        font-size: 82px
+        line-height: 90px
     &__hover
       line-height: 102px
       position: relative
       z-index: 1
       font-stretch: 90%
+      @media screen and ( max-width: 1366px )
+        line-height: 93px
       &::after
         content: attr(data-hover)
         position: absolute
