--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -9,6 +9,8 @@
     flex-direction: row
     justify-content: space-between
     padding-top: 50px
+    @media screen and ( max-width: 1366px )
+      padding-top: 40px
   &-menu
     display: flex
     flex-direction: row
@@ -18,6 +20,9 @@
       color: #fff
       margin-left: 39px
       position: relative
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        margin-left: 38px
       &:first-child
         margin-left: 0px
       &:hover
@@ -33,6 +38,8 @@
         transition: all 0.4s
   &-nav
     margin-top: 9px
+    @media screen and ( max-width: 1366px )
+      margin-top: 19px
   &-submenu
     position: absolute
     top: 30px
@@ -64,3 +71,12 @@
       a
         color: #000
         transition: all 0.4s
+  &-logo
+    max-width: 170px
+    @media screen and ( max-width: 1366px )
+      max-width: 158px
+    img
+      width: 100%
+      height: 100%
+      object-fit: contain
+
