--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -7,9 +7,13 @@
     position: relative
     z-index: 2
     background-color: #fff
+    @media screen and ( max-width: 1366px )
+      padding-top: 102px
   &-wrapper
     margin-top: 47px
     height: 600px
+    @media screen and ( max-width: 1366px )
+      height: 548px
   &-balloon
     &__header
       font-size: 28px
@@ -19,12 +23,19 @@
       font-weight: 400
       margin-bottom: 20px
       display: inline-block
+      @media screen and ( max-width: 1366px )
+        font-size: 24px
+        line-height: 29px
+        margin-bottom: 13px
     &__text
       font-size: 20px
       line-height: 30px
       color: #000
       font-family: 'Jost'
       font-weight: 400
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 28px
     &__href
       font-size: 20px
       line-height: 30px
@@ -33,10 +44,16 @@
       font-weight: 400
       display: inline-block
       margin-bottom: 26px
-
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 28px
+        margin-bottom: 17px
 .ymaps-2-1-78-balloon-pane
   left: calc(100% - 360px - 90px) !important
   top: 136px !important
+  @media screen and ( max-width: 1366px )
+    left: calc(100% - 378px)!important
+    top: 126px!important
   .link--orange
     font-size: 19px
     line-height: 28px
@@ -45,6 +62,10 @@
     font-family: 'Jost'
     display: inline-block
     margin-bottom: 10px
+    @media screen and ( max-width: 1366px )
+      font-size: 17px
+      line-height: 25px
+      padding: 7px 25px
 .ymaps-2-1-78-balloon-overlay,
 .ymaps-2-1-78-balloon
   top: 0px !important
@@ -54,11 +75,16 @@
   width: 360px !important
   box-shadow: 3px 4px 20px 0px rgba(0, 0, 0, 0.1) !important
   padding: 0px !important
+  @media screen and ( max-width: 1366px )
+    max-width: 315px !important
+    width: 315px !important
 .ymaps-2-1-78-balloon__content
   padding: 40px !important
   margin-right: 0px !important
   padding-top: 37px !important
   padding-bottom: 29px !important
+  @media screen and ( max-width: 1366px )
+    padding-top: 33px !important
 .ymaps-2-1-78-balloon__tail
   display: none !important
 .ymaps-2-1-78-balloon__close-button
