--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -15,8 +15,13 @@ body
     font-size: 60px
     line-height: 64px
     color: #000
+    @media screen and ( max-width: 1366px )
+      font-size: 48px
+      line-height: 51px
     &--head
       max-width: 460px
+      @media screen and ( max-width: 1366px )
+        max-width: 382px
     &--center
       text-align: center
       margin: 0 auto
@@ -26,12 +31,17 @@ body
     justify-content: space-between
     align-items: center
     padding: 0 88px
+    @media screen and ( max-width: 1366px )
+      padding: 0 58px
     a
       font-size: 22px
-      line-height: 32px
+      line-height: 20px
       color: #000
       border-bottom: 1px solid rgba(217,217,217,1)
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        font-size: 20px
+        line-height: 17px
       &:hover
         border-bottom: 1px solid rgba(217,217,217,0)
         transition: all 0.4s
@@ -48,6 +58,9 @@ body
   height: 180px
   margin-top: 6px
   margin-right: 4px
+  @media screen and ( max-width: 1366px )
+    width: 160px
+    height: 160px
   a
     font-size: 22px
     line-height: 26px
@@ -57,13 +70,18 @@ body
     height: 100%
     justify-content: center
     align-items: center
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 24px
 
 .common
   &-text
     font-size: 22px
     line-height: 32px
     color: #000
-
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 30px
 .circle-text
   width: 400px
   height: 400px
@@ -73,17 +91,27 @@ body
   justify-content: center
   border-radius: 50%
   overflow: hidden
+  @media screen and ( max-width: 1366px )
+    width: 340px
+    height: 340px
   &__title
     font-size: 72px
     line-height: 64px
     margin-bottom: 9px
     color: #fff
+    @media screen and ( max-width: 1366px )
+      font-size: 61px
+      line-height: 62px
   &__desc
     font-size: 22px
     line-height: 32px
     text-align: center
     color: #fff
     max-width: 290px
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 32px
+      max-width: 270px
 
 .link
   &--orange
@@ -93,6 +121,9 @@ body
     line-height: 28px
     padding: 11px 36px 12px
     border-radius: 28px
+    @media screen and ( max-width: 1366px )
+      font-size: 20px
+      line-height: 26px
 
 .btn
   &--orange
