--- a/app/src/sass/components/footer.sass
+++ b/app/src/sass/components/footer.sass
@@ -33,6 +33,8 @@
     justify-content: flex-start
     margin: 0 auto
     padding-top: 95px
+    @media screen and ( max-width: 1366px )
+      padding-top: 75px
   &-column
     &--info
       @include dfc()
@@ -43,6 +45,8 @@
     &--nav
       width: calc(100% / 3 * 2)
       margin-left: 77px
+      @media screen and ( max-width: 1366px )
+        margin-left: 70px
     &--contacts
       width: calc(100% / 3)
   &-wrapper
@@ -53,6 +57,8 @@
   &-logo
     max-width: 170px
     margin-left: 87px
+    @media screen and ( max-width: 1366px )
+      max-width: 155px
     img
       width: 100%
       height: auto
@@ -64,6 +70,10 @@
     text-align: center
     max-width: 255px
     margin-top: 16px
+    @media screen and ( max-width: 1366px )
+      font-size: 18px
+      line-height: 24px
+      margin-top: 13px
   &-copyright
     font-size: 20px
     line-height: 26px
@@ -71,19 +81,29 @@
     text-align: center
     max-width: 325px
     margin-top: 29px
+    @media screen and ( max-width: 1366px )
+      font-size: 18px
+      line-height: 24px
   &-nav
     @include dfr()
     justify-content: space-between
   &-list
     @include dfc()
     margin-right: 66px
+    @media screen and ( max-width: 1366px )
+      margin-right: 0px
   &-item
     margin-bottom: 28px
+    @media screen and ( max-width: 1366px )
+      margin-bottom: 26px
     &__href
       font-size: 20px
       line-height: 28px
       color: #fff
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 24px
       &:hover
         color: $orange
   &-sublist
@@ -92,39 +112,60 @@
   &-subitem
     margin-bottom: 18px
     max-width: 300px
+    @media screen and ( max-width: 1366px )
+      max-width: 258px
+      margin-bottom: 16px
     a
       font-size: 18px
       line-height: 24px
       color: rgba(255,255,255,0.5)
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        font-size: 16px
+        line-height: 20px
       &:hover
         color: $orange
   &-tel
     @include dfc()
     margin-left: 44px
+    @media screen and ( max-width: 1366px )
+      margin-left: 33px
     a
       font-size: 20px
       line-height: 28px
       color: #fff
       transition: all 0.4s
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 26px
       &:hover
         color: $orange
   &-address
     margin-top: 26px
     margin-left: 44px
+    @media screen and ( max-width: 1366px )
+      margin-left: 33px
     p
       font-size: 20px
       line-height: 28px
       color: #fff
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 26px
   &-email
     margin-top: 26px
     margin-left: 44px
+    @media screen and ( max-width: 1366px )
+      margin-left: 33px
     a
       font-size: 20px
       line-height: 28px
       color: #fff
       transition: all 0.4s
       border-bottom: 1px solid rgba(255,255,255,0.1)
+      @media screen and ( max-width: 1366px )
+        font-size: 18px
+        line-height: 26px
       &:hover
         color: $orange
         border-color: rgba(255,255,255,0)
@@ -135,6 +176,8 @@
     justify-content: flex-end
     margin-top: 17px
     padding-bottom: 60px
+    @media screen and ( max-width: 1366px )
+      margin-top: 5px
 
 .developer
   @include dfr()
