--- a/app/src/sass/components/about.sass
+++ b/app/src/sass/components/about.sass
@@ -31,6 +31,8 @@
     z-index: 2
     @media screen and ( max-width: 1366px )
       margin-left: 63px
+    @media screen and ( max-width: 950px )
+      margin: 0 auto
 .about-building
   position: absolute
   display: block
@@ -39,6 +41,8 @@
   z-index: 1
   @media screen and ( max-width: 1366px )
     top: 573px
+  @media screen and ( max-width: 950px )
+    right: calc(50% + 450px)
   &--fixed
     position: fixed
     top: calc(50% - 280px)
