--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -17,10 +17,18 @@
     @media screen and ( max-width: 1366px )
       max-width: 1140px
       margin-top: 45px
+    @media screen and ( max-width: 950px )
+      max-width: none
+      width: 100%
+      flex-direction: column
+      align-items: center
   &-item
     width: calc(100% / 3 - 53px)
     @media screen and ( max-width: 1366px )
       width: calc(100% / 3 - 40px)
+    @media screen and ( max-width: 950px )
+      width: 50%
+      margin-bottom: 30px
     &__href
       display: flex
       flex-direction: column
