--- a/app/src/sass/components/footer.sass
+++ b/app/src/sass/components/footer.sass
@@ -35,6 +35,9 @@
     padding-top: 95px
     @media screen and ( max-width: 1366px )
       padding-top: 75px
+    @media screen and ( max-width: 950px )
+      flex-direction: column
+      align-items: center
   &-column
     &--info
       @include dfc()
@@ -42,11 +45,19 @@
       justify-content: flex-start
       width: calc(100% / 3 - 50px)
       margin-top: 4px
+      @media screen and ( max-width: 950px )
+        width: 50%
+        margin-bottom: 40px
     &--nav
       width: calc(100% / 3 * 2)
       margin-left: 77px
       @media screen and ( max-width: 1366px )
         margin-left: 70px
+      @media screen and ( max-width: 1100px )
+        margin-left: 40px
+        width: calc(100% / 3 * 2 - 15%)
+      @media screen and ( max-width: 950px )
+        margin-left: 0px
     &--contacts
       width: calc(100% / 3)
   &-wrapper
@@ -54,6 +65,8 @@
     flex-grow: 1
     width: calc(100% / 3 * 2)
     justify-content: space-between
+    @media screen and ( max-width: 950px )
+      width: 100%
   &-logo
     max-width: 170px
     margin-left: 87px
@@ -115,6 +128,8 @@
     @media screen and ( max-width: 1366px )
       max-width: 258px
       margin-bottom: 16px
+    @media screen and ( max-width: 1100px )
+      max-width: 160px
     a
       font-size: 18px
       line-height: 24px
@@ -130,6 +145,8 @@
     margin-left: 44px
     @media screen and ( max-width: 1366px )
       margin-left: 33px
+    @media screen and ( max-width: 1100px )
+      margin-left: 0px
     a
       font-size: 20px
       line-height: 28px
@@ -145,6 +162,8 @@
     margin-left: 44px
     @media screen and ( max-width: 1366px )
       margin-left: 33px
+    @media screen and ( max-width: 1100px )
+      margin-left: 0px
     p
       font-size: 20px
       line-height: 28px
@@ -157,6 +176,8 @@
     margin-left: 44px
     @media screen and ( max-width: 1366px )
       margin-left: 33px
+    @media screen and ( max-width: 1100px )
+      margin-left: 0px
     a
       font-size: 20px
       line-height: 28px
