--- a/app/src/sass/components/header.sass
+++ b/app/src/sass/components/header.sass
@@ -14,6 +14,8 @@
   &-menu
     display: flex
     flex-direction: row
+    @media screen and ( max-width: 950px )
+      display: none
     &__item
       font-size: 20px
       line-height: 28px
@@ -23,6 +25,8 @@
       @media screen and ( max-width: 1366px )
         font-size: 18px
         margin-left: 38px
+      @media screen and ( max-width: 1100px )
+        margin-left: 20px
       &:first-child
         margin-left: 0px
       &:hover
@@ -75,6 +79,8 @@
     max-width: 170px
     @media screen and ( max-width: 1366px )
       max-width: 158px
+    @media screen and ( max-width: 1100px )
+      max-width: 140px
     img
       width: 100%
       height: 100%
