--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -61,6 +61,9 @@
       @media screen and ( max-width: 1366px )
         font-size: 82px
         line-height: 90px
+      @media screen and ( max-width: 950px )
+        font-size: 70px
+        line-height: 80px
     &__hover
       line-height: 102px
       position: relative
@@ -68,6 +71,8 @@
       font-stretch: 90%
       @media screen and ( max-width: 1366px )
         line-height: 93px
+      @media screen and ( max-width: 950px )
+        line-height: 85px
       &::after
         content: attr(data-hover)
         position: absolute
