--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -54,7 +54,9 @@
       padding-top: 261px
       padding-left: 110px
       padding-bottom: 90px
-
+    @media screen and ( max-width: 950px )
+      padding-top: 225px
+      padding-left: 50px
   &__tagline
     color: #fff
     margin-bottom: 32px
@@ -90,11 +92,14 @@
     margin-top: 335px
     @media screen and ( max-width: 1366px )
       margin-top: 182px
-
+    @media screen and ( max-width: 950px )
+      margin-top: 100px
 .achievements
   &-list
     display: flex
     flex-direction: row
+    @media screen and ( max-width: 950px )
+      flex-direction: column
   &-item
     margin-right: 200px
     display: flex
@@ -104,6 +109,9 @@
       margin-right: 97px
       &:last-child
         margin-right: 0px
+    @media screen and ( max-width: 950px )
+      margin-right: 0px
+      margin-bottom: 40px
     &:last-child
       margin-right: 0px
     &__num
