--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -33,6 +33,8 @@ body
     padding: 0 88px
     @media screen and ( max-width: 1366px )
       padding: 0 58px
+    @media screen and ( max-width: 950px )
+      padding: 0px
     a
       font-size: 22px
       line-height: 20px
