--- a/app/src/sass/components/default.sass
+++ b/app/src/sass/components/default.sass
@@ -4,6 +4,9 @@ h1
   @media screen and ( max-width: 1366px )
     font-size: 60px
     line-height: 70px
+  @media screen and ( max-width: 767px )
+    font-size: 35px
+    line-height: 42px
 h2
   font-size: 60px
   line-height: 64px
