--- a/app/src/sass/components/about.sass
+++ b/app/src/sass/components/about.sass
@@ -11,6 +11,11 @@
     z-index: 2
     @media screen and ( max-width: 1366px )
       max-width: 758px
+    @media screen and ( max-width: 767px )
+      margin-bottom: 100px
+      margin-top: 100px
+      &:first-child
+        margin-top: 0px
     &:first-child
       margin-top: 0px
     &:nth-child(2n)
@@ -43,6 +48,8 @@
     top: 573px
   @media screen and ( max-width: 950px )
     right: calc(50% + 450px)
+  @media screen and ( max-width: 767px )
+    display: none
   &--fixed
     position: fixed
     top: calc(50% - 280px)
