--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -29,6 +29,8 @@
     @media screen and ( max-width: 950px )
       width: 50%
       margin-bottom: 30px
+    @media screen and ( max-width: 767px )
+      width: 70%
     &__href
       display: flex
       flex-direction: column
