--- a/app/src/sass/components/partners.sass
+++ b/app/src/sass/components/partners.sass
@@ -6,6 +6,8 @@
   z-index: 2
   @media screen and ( max-width: 1366px )
     padding-bottom: 100px
+  @media screen and ( max-width: 767px )
+    padding-top: 100px
   &-text
     max-width: 950px
     margin: 0 auto
@@ -22,7 +24,7 @@
       margin: 83px auto 0
       max-width: 1140px
   &-item
-    width: calc(100% / 5)
+    width: calc(100% / 2)
     margin-bottom: 105px
     display: flex
     justify-content: center
