--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -64,6 +64,10 @@
       @media screen and ( max-width: 950px )
         font-size: 70px
         line-height: 80px
+      @media screen and ( max-width: 767px )
+        font-size: 50px
+        line-height: 60px
+        text-align: center
     &__hover
       line-height: 102px
       position: relative
@@ -73,6 +77,8 @@
         line-height: 93px
       @media screen and ( max-width: 950px )
         line-height: 85px
+      @media screen and ( max-width: 950px )
+        line-height: 60px
       &::after
         content: attr(data-hover)
         position: absolute
