--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -57,6 +57,11 @@
     @media screen and ( max-width: 950px )
       padding-top: 225px
       padding-left: 50px
+    @media screen and ( max-width: 767px )
+      max-width: none
+      width: 100%
+      padding-left: 20px
+      padding-right: 20px
   &__tagline
     color: #fff
     margin-bottom: 32px
@@ -68,6 +73,9 @@
       line-height: 52px
       max-width: 480px
       margin-bottom: 17px
+    @media screen and ( max-width: 767px )
+      font-size: 38px
+      line-height: 46px
 
   &__year
     font-size: 160px
@@ -78,6 +86,10 @@
       font-size: 128px
       line-height: 140px
       margin-bottom: 165px
+    @media screen and ( max-width: 767px )
+      font-size: 80px
+      line-height: 90px
+      margin-bottom: 100px
   &__text
     font-size: 22px
     line-height: 35px
