--- a/app/src/sass/helpers/_main.sass
+++ b/app/src/sass/helpers/_main.sass
@@ -9,6 +9,8 @@ body
   @media screen and ( max-width: 1885px )
     max-width: none
     padding: 0px 50px
+  @media screen and ( max-width: 767px )
+    padding: 0px 20px
 .section
   padding-top: 105px
   &-text
@@ -18,6 +20,9 @@ body
     @media screen and ( max-width: 1366px )
       font-size: 48px
       line-height: 51px
+    @media screen and ( max-width: 767px )
+      font-size: 30px
+      line-height: 38px
     &--head
       max-width: 460px
       @media screen and ( max-width: 1366px )
@@ -44,6 +49,9 @@ body
       @media screen and ( max-width: 1366px )
         font-size: 20px
         line-height: 17px
+      @media screen and ( max-width: 767px )
+        font-size: 18px
+        line-height: 15px
       &:hover
         border-bottom: 1px solid rgba(217,217,217,0)
         transition: all 0.4s
@@ -63,6 +71,9 @@ body
   @media screen and ( max-width: 1366px )
     width: 160px
     height: 160px
+  @media screen and ( max-width: 767px )
+    width: 115px
+    height: 115px
   a
     font-size: 22px
     line-height: 26px
@@ -75,6 +86,9 @@ body
     @media screen and ( max-width: 1366px )
       font-size: 20px
       line-height: 24px
+    @media screen and ( max-width: 767px )
+      font-size: 16px
+      line-height: 20px
 
 .common
   &-text
@@ -84,6 +98,9 @@ body
     @media screen and ( max-width: 1366px )
       font-size: 20px
       line-height: 30px
+    @media screen and ( max-width: 767px )
+      font-size: 18px
+      line-height: 24px
 .circle-text
   width: 400px
   height: 400px
