--- a/app/src/sass/components/about.sass
+++ b/app/src/sass/components/about.sass
@@ -16,6 +16,8 @@
       margin-top: 100px
       &:first-child
         margin-top: 0px
+    @media screen and ( max-width: 550px )
+      margin-bottom: 60px
     &:first-child
       margin-top: 0px
     &:nth-child(2n)
