--- a/app/src/sass/components/map.sass
+++ b/app/src/sass/components/map.sass
@@ -14,6 +14,8 @@
     height: 600px
     @media screen and ( max-width: 1366px )
       height: 548px
+    @media screen and ( max-width: 550px )
+      height: 350px
   &-balloon
     &__header
       font-size: 28px
