--- a/app/src/sass/components/news.sass
+++ b/app/src/sass/components/news.sass
@@ -31,6 +31,8 @@
       margin-bottom: 30px
     @media screen and ( max-width: 767px )
       width: 70%
+    @media screen and ( max-width: 550px )
+      width: 100%
     &__href
       display: flex
       flex-direction: column
@@ -54,6 +56,8 @@
         color: #000
         @media screen and ( max-width: 1366px )
           font-size: 50px
+        @media screen and ( max-width: 550px )
+          font-size: 36px
       .month
         font-size: 18px
         line-height: 32px
@@ -69,6 +73,13 @@
       @media screen and ( max-width: 1366px )
         font-size: 24px
         line-height: 28px
+      @media screen and ( max-width: 767px )
+        font-size: 22px
+        line-height: 26px
+      @media screen and ( max-width: 550px )
+        font-size: 18px
+        line-height: 24px
+
       &:hover
         span
           border-color: rgba(229,229, 229,0)
