--- a/app/src/sass/components/products.sass
+++ b/app/src/sass/components/products.sass
@@ -68,6 +68,12 @@
         font-size: 50px
         line-height: 60px
         text-align: center
+      @media screen and ( max-width: 550px )
+        font-size: 38px
+        line-height: 48px
+      @media screen and ( max-width: 400px )
+        font-size: 28px
+        line-height: 38px
     &__hover
       line-height: 102px
       position: relative
@@ -79,6 +85,10 @@
         line-height: 85px
       @media screen and ( max-width: 950px )
         line-height: 60px
+      @media screen and ( max-width: 550px )
+        line-height: 48px
+      @media screen and ( max-width: 400px )
+        line-height: 38px
       &::after
         content: attr(data-hover)
         position: absolute
