--- a/app/src/sass/components/video-section.sass
+++ b/app/src/sass/components/video-section.sass
@@ -62,6 +62,8 @@
       width: 100%
       padding-left: 20px
       padding-right: 20px
+    @media screen and ( max-width: 400px )
+      padding-top: 180px
   &__tagline
     color: #fff
     margin-bottom: 32px
@@ -76,6 +78,12 @@
     @media screen and ( max-width: 767px )
       font-size: 38px
       line-height: 46px
+    @media screen and ( max-width: 550px )
+      font-size: 28px
+      line-height: 36px
+    @media screen and ( max-width: 400px )
+      font-size: 24px
+      line-height: 30px
 
   &__year
     font-size: 160px
@@ -90,6 +98,13 @@
       font-size: 80px
       line-height: 90px
       margin-bottom: 100px
+    @media screen and ( max-width: 550px )
+      font-size: 60px
+      line-height: 70px
+    @media screen and ( max-width: 400px )
+      font-size: 40px
+      line-height: 50px
+      margin-bottom: 60px
   &__text
     font-size: 22px
     line-height: 35px
@@ -98,6 +113,12 @@
     @media screen and ( max-width: 1366px )
       font-size: 20px
       line-height: 30px
+    @media screen and ( max-width: 550px )
+      font-size: 18px
+      line-height: 26px
+    @media screen and ( max-width: 400px )
+      font-size: 16px
+      line-height: 24px
     + .back-video__text
       margin-top: 27px
   &__list
@@ -106,6 +127,8 @@
       margin-top: 182px
     @media screen and ( max-width: 950px )
       margin-top: 100px
+    @media screen and ( max-width: 400px )
+      margin-top: 60px
 .achievements
   &-list
     display: flex
@@ -133,6 +156,10 @@
       @media screen and ( max-width: 1366px )
         font-size: 60px
         margin-bottom: 10px
+      @media screen and ( max-width: 550px )
+        font-size: 40px
+      @media screen and ( max-width: 400px )
+        font-size: 30px
     &__text
       font-size: 22px
       line-height: 35px
@@ -143,3 +170,9 @@
       @media screen and ( max-width: 1366px )
         font-size: 20px
         line-height: 30px
+      @media screen and ( max-width: 550px )
+        font-size: 18px
+        line-height: 26px
+      @media screen and ( max-width: 400px )
+        font-size: 16px
+        line-height: 24px
